--- a/recipes-production.properties
+++ b/recipes-production.properties
@@ -3,10 +3,10 @@ info.app.name=Recipes
 info.app.description=Recipes
 info.app.version=1.0.0
 
-spring.datasource.url=jdbc:mysql://localhost:3306/RecipesDB
+spring.datasource.url=jdbc:mysql://localhost:3306/recipes_qa
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=admin@123
+spring.datasource.password=myR00tSql
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 
 spring.jpa.hibernate.ddl-auto=create-drop
